1st version done

--- a/web-app-react-ts/src/App.scss
+++ b/web-app-react-ts/src/App.scss
@@ -5,10 +5,17 @@
   color: #2c3e50;
 
   .header {
-    font-size: 28px;
+    font-size: 26px;
     text-align: left;
-    padding: 10px 0 10px 20px;
+    padding: 8px 0 8px 22px;
     background-color: black;
     color: white;
+    margin-bottom: 22px;
+  }
+
+  .end-game {
+    button {
+      width: 250px;
+    }
   }
 }
